--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/bootstrap.min.css",
+              "src/assets/css/vandycreated.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
